network.yml
Description: CD12352 - Infrastructure as Code Project - Network

Parameters:  

  ProjectName:
    Type: String
    Description: My final project IAC

  VpcCIDR:
    Type: String
    Description: Main VPC

  Privtesubnet1:
    Type: String
    Description: Fist private subnet to host a server on it

  Privtesubnet2:
    Type: String
    Description: Second private subnet for High Availability server

  Publicsubnet1:
    Type: String
    Description: Fist public subnet to host a NAt gateway and Internet access

  Publicsubnet2:
    Type: String
    Description: Second pubilc subnet for High Availability Nat gateway

  PrivteSubnet1CIDR:
    Type: String
    Description: We use CIDR parameter to separate the work for efficient

  PrivteSubnet2CIDR:
    Type: String
    Description: We use CIDR parameter to separate the work for efficient

  PublicSubnet1CIDR:
    Type: String
    Description: We use CIDR parameter to separate the work for efficient

  PublicSubnet2CIDR:
    Type: String
    Description: We use CIDR parameter to separate the work for efficient


Resources:

  # We fisrt create out varuial private 
  VPC:
    Type: AWS::EC2::VPC
    Properties:
      CidrBlock: !Ref VpcCIDR
      EnableDnsHostnames: true
      Tags:
        - Key: Name
          Value: !Ref ProjectName
  #-------------
  # Internet section
  # Create the internet gateway 
  InternetGateway:
    Type: AWS::EC2::InternetGateway
    Properties:
      Tags:
        - Key: Name
          Value: !Ref ProjectName
  # And then we attach it to our VPC 
  InternetGatewayAttachment:
    Type: AWS::EC2::VPCGatewayAttachment
    Properties:
      InternetGatewayId: !Ref InternetGateway
      VpcId: !Ref VPC
  # Nat gateway allow the server or Database to get access to internet through public subnet 
  NatGateway1:
    Type: AWS::EC2::NatGateway
    Properties:
      SubnetId: !Ref PublicSubnet1
      AllocationId: !GetAtt NatGateway1EIP.AllocationId
      Tags:
        - Key: Name
          Value: !Sub ${ProjectName}-nat-gateway-1
  # Second Nat gateway for High Availability 
  NatGateway2:
    Type: AWS::EC2::NatGateway
    Properties:
      SubnetId: !Ref PublicSubnet2
      AllocationId: !GetAtt NatGateway2EIP.AllocationId
      Tags:
        - Key: Name
          Value: !Sub ${ProjectName}-nat-gateway-2

  NatGateway1EIP:
    Type: AWS::EC2::EIP
    DependsOn: InternetGatewayAttachment
    Properties:
      Domain: vpc
      Tags:
        - Key: Name
          Value: !Sub ${ProjectName}-nat-gateway-1

  NatGateway2EIP:
    Type: AWS::EC2::EIP
    DependsOn: InternetGatewayAttachment
    Properties:
      Domain: vpc
      Tags:
        - Key: Name
          Value: !Sub ${ProjectName}-nat-gateway-2


  #---------------
  # subnet section
  PrivteSubnet1:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref VPC
      AvailabilityZone: !Select [0, !GetAZs '']
      CidrBlock: !Ref PrivteSubnet1CIDR
      MapPublicIpOnLaunch: false
      Tags:
        - Key: Name
          Value: !Sub ${ProjectName} ${Privtesubnet1}
  
  PrivteSubnet2:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref VPC
      AvailabilityZone: !Select [1, !GetAZs '']
      CidrBlock: !Ref PrivteSubnet2CIDR
      MapPublicIpOnLaunch: false
      Tags:
        - Key: Name
          Value: !Sub ${ProjectName} ${Privtesubnet2}

  PublicSubnet1:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref VPC
      AvailabilityZone: !Select [0, !GetAZs '']
      CidrBlock: !Ref PublicSubnet1CIDR
      MapPublicIpOnLaunch: true
      Tags:
        - Key: Name
          Value: !Sub ${ProjectName} ${Publicsubnet1}

  PublicSubnet2:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref VPC
      AvailabilityZone: !Select [1, !GetAZs '']
      CidrBlock: !Ref PublicSubnet2CIDR
      MapPublicIpOnLaunch: true
      Tags:
        - Key: Name
          Value: !Sub ${ProjectName} ${Publicsubnet2}
  #--------------
  #Route section
  PublicRouteTable:
    Type: AWS::EC2::RouteTable
    Properties: 
      VpcId: !Ref VPC
      Tags: 
        - Key: Name 
          Value: !Sub ${ProjectName}-public

  PrivateRouteTable1:
    Type: AWS::EC2::RouteTable
    Properties: 
      VpcId: !Ref VPC
      Tags: 
        - Key: Name 
          Value: !Sub ${ProjectName}-private-1

  PrivateRouteTable2:
    Type: AWS::EC2::RouteTable
    Properties: 
      VpcId: !Ref VPC
      Tags: 
        - Key: Name 
          Value: !Sub ${ProjectName}-private-2

  DefaultPublicRoute: 
    Type: AWS::EC2::Route
    DependsOn: InternetGatewayAttachment
    Properties: 
      RouteTableId: !Ref PublicRouteTable
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId: !Ref InternetGateway

  DefaultPrivateRoute1:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId: !Ref PrivateRouteTable1
      DestinationCidrBlock: 0.0.0.0/0
      NatGatewayId: !Ref NatGateway1
  DefaultPrivateRoute2:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId: !Ref PrivateRouteTable2
      DestinationCidrBlock: 0.0.0.0/0
      NatGatewayId: !Ref NatGateway2

  PublicSubnet1RouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId: !Ref PublicRouteTable
      SubnetId: !Ref PublicSubnet1
  PublicSubnet2RouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId: !Ref PublicRouteTable
      SubnetId: !Ref PublicSubnet2
  PrivateSubnet1RouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId: !Ref PrivateRouteTable1
      SubnetId: !Ref PrivteSubnet1
  PrivateSubnet2RouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId: !Ref PrivateRouteTable2
      SubnetId: !Ref PrivteSubnet2



Outputs:
  VPC:
    Description: This is for export the vpc
    Value: !Ref VPC 
    Export:
      Name: !Sub ${ProjectName}-VPC-IAC
  
  PrivteSubnet1:
    Description: Private subnet for DB
    Value: !Ref PrivteSubnet1
    Export:
      Name: !Sub ${ProjectName}-private-subnet-1

  PrivteSubnet2:
    Description: Private subnet for DB
    Value: !Ref PrivteSubnet2
    Export:
      Name: !Sub ${ProjectName}-private-subnet-2

  PublicSubnet1:
    Description: Private subnet 1 for Web application and LB
    Value: !Ref PublicSubnet1
    Export:
      Name: !Sub ${ProjectName}-public-subnet-1

  PublicSubnet2:
    Description: Public subnet 2 for Web appication and LB
    Value: !Ref PublicSubnet2
    Export:
      Name: !Sub ${ProjectName}-public-subnet-2

  PublicRouteTable:
    Description: Public table 
    Value: !Ref PublicRouteTable
    Export:
      Name: !Sub ${ProjectName}-public-route-table
  
  PrivateRouteTable1:
    Description: Private routing table 
    Value: !Ref PrivateRouteTable1
    Export:
      Name: !Sub ${ProjectName}-private-route-table-1

  PrivateRouteTable2:
    Description: Private routing table 
    Value: !Ref PrivateRouteTable2
    Export:
      Name: !Sub ${ProjectName}-private-route-table-2

  PublicSubnets:
    Description: Private routing table 
    Value: !Join [ ',', [ !Ref PublicSubnet2, !Ref PublicSubnet1  ] ]
    Export:
      Name: !Sub ${ProjectName}-public-subnets-1

  PrivateSubnets:
    Description: Private routing table 
    Value: !Join [ ',', [ !Ref PrivteSubnet1, !Ref PrivteSubnet2 ] ]
    Export:
      Name: !Sub ${ProjectName}-private-subnets-1
